--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset='UTF-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1' />
-  <title>React App</title>
+  <title>Gotchapedia | 갓챠피디아</title>
 </head>
 <body>
   <div id='root'></div>
-  <!-- 유튜브 api -->
-  <!-- <script src='https://www.youtube.com/iframe_api'></script> -->
 </body>
 </html>
